TestSuite/errors/err0543.pas
//!Повторное объявление
function Prm<T>(Self: array of T): integer; extensionmethod := 1;
function Prm<T>(Self: array of T): integer; extensionmethod := 1;

begin
end.